# fodlereyez

./: .gitignore  Cargo.toml  DEV_README.md  README.md  rustfmt.toml
.github/workflows/: rust.yml
src/: color.rs  lib.rs  main.rs  real_proxies.rs  tui.rs
src/analysis/: byteable.rs
src/file_analysis/: byteable.rs  file_objects.rs  file_system_proxy_traits.rs  file_types.rs  mock_utils.rs  mod.rs  proxies.rs
src/tui/: color.rs  mod.rs  patterns.rs  selectable_text_view.rs
