[package]
name = "fodlereyez"
version = "0.1.0"
edition = "2021"
description = """Analyses the file tree, from the supplied ROOT_DIRECTORY down, collecting size information for files and \
folders, and displaying it in a navigable tree, colored and sorted by size.

Press [Esc] to exit, →←↑↓ and mouse to navigate, [Enter] or left mouse click to open, and [Space] to open selected \
entry in FileExplorer or terminal"""

[dependencies]
cursive = { version = "0.20", default-features = false, features = ["crossterm-backend"] }
clap = { version = "4.1.4", features = ["derive", "cargo", "wrap_help"] }
regex = "1"
lazy_static = "1.4.0"

[dev-dependencies]
mockall = "0.11.3"
